Removed RequestedBookLikeCounterClosedProjection.java. Removed repo injections in converters. Changed max rating range for ReviewDTO.java from 10 to 5. Override methods equals, hashCode and toString in RequestedBookDTO.java. Implemented custom logic in equals method and toString method. Removed String[] genres, List<String> authorsFullName, List<String> userEmails from RequestedBookDTO.java. Adding method likeRequestedBook in RequestedBookServiceImpl.java. Implementing a new method in RequestedBookServiceImpl.java for displaying and retrieving RequestedBook objects using filters (use in main display view for RequestedBook objects). Convert from Date to LocalDate. Fixes in ReviewServiceImpl.java for method updateReview.